# stellar-router

./: .gitignore  .storage-baseline.txt  .wasm-size-baseline.txt  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  cliff.toml  deny.toml  docker-compose.yml
.github/workflows/: ci.yml  metrics-integration-tests.yml  pr-title-validation.yml  release.yml  security-audit.yml  wasm-size-check.yml
api-server/: Cargo.toml
api-server/src/: handlers.rs  main.rs  rate_limit.rs  rpc.rs  state.rs  tests.rs  types.rs  websocket.rs
contracts/router-access/src/: lib.rs
contracts/router-common/src/: lib.rs
contracts/router-core/src/: lib.rs  scoring.rs
contracts/router-execution/src/: lib.rs
contracts/router-middleware/src/: call_log.rs  circuit_breaker.rs  lib.rs  rate_limit.rs
contracts/router-middleware/test_snapshots/tests/: test_admin_getter.1.json  test_post_call_succeeds.1.json  test_total_calls_not_incremented_on_rejected_pre_call.1.json  test_transfer_admin.1.json  test_unauthorized_transfer_admin_fails.1.json
contracts/router-multicall/: Cargo.toml
contracts/router-multicall/src/: lib.rs
contracts/router-multicall/test_snapshots/tests/: test_all_calls_succeed.1.json  test_optional_calls_fail_batch_completes.1.json  test_required_call_fails_aborts_batch.1.json  test_transfer_admin.1.json
contracts/router-quote/: Cargo.toml
contracts/router-quote/src/: lib.rs
contracts/router-registry/src/: lib.rs
contracts/router-timelock/src/: lib.rs
docs/: api-reference.md  architecture.md  cookbook.md  deployment.md  runbook.md  troubleshooting.md  tx-tracking-websocket-protocol.md  upgrading.md
metrics/: README.md  alerts.yml
metrics/src/: auth.rs  cli.rs  collector.rs  main.rs  metrics.rs  openapi.rs  replay_protection.rs  rpc.rs  server.rs
scripts/: profile-storage.sh  validate-dependencies.sh
