[workspace]
resolver = "2"
members = [
    "contracts/router-common",
    "contracts/router-core",
    "contracts/router-registry",
    "contracts/router-access",
    "contracts/router-middleware",
    "contracts/router-timelock",
    "contracts/router-multicall",
    "contracts/router-quote",
    "contracts/router-execution",
]

[workspace.dependencies]
soroban-sdk = { version = "21.7.6", default-features = false, features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
