[package]
name = "router-api-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "router-api-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7.9", features = ["tokio"] }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

[dev-dependencies]
axum-test = "15.0"
tokio = { version = "1.44.2", features = ["full"] }
