[package]
name = "router-api-server"
version = "0.1.0"
edition = "2021"
description = "API server for stellar-router with transaction simulation and WebSocket tracking"

[[bin]]
name = "router-api-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7.9", features = ["tokio", "ws"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = { version = "0.21" }
axum = { version = "0.7.9", features = ["tokio"] }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

[dev-dependencies]
axum-test = "15.0"
# HTTP server
axum = { version = "0.7.9", features = ["tokio", "ws"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = { version = "0.26.2" }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
reqwest = { version = "0.12.9", features = ["json"], default-features = false }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
clap = { version = "4.5.37", features = ["derive", "env"] }
anyhow = { version = "1.0.98" }
async-trait = { version = "0.1.88" }
dashmap = { version = "6.1.0" }
tower = { version = "0.4" }
futures-util = { version = "0.3" }

[dev-dependencies]
tokio = { version = "1.44.2", features = ["full"] }
futures-util = { version = "0.3" }
