[workspace]

[package]
name = "router-api-server"
version = "0.1.0"
edition = "2021"
description = "API server for stellar-router with transaction simulation and WebSocket tracking"

[[bin]]
name = "router-api-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7.9", features = ["tokio", "ws"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = { version = "0.26.2" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"], default-features = false }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
anyhow = { version = "1.0.98" }
dashmap = { version = "6.1.0" }
futures-util = { version = "0.3" }
clap = { version = "4.5.37", features = ["derive", "env"] }
async-trait = { version = "0.1.88" }
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
axum-test = "15.0"
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1.44.2", features = ["full"] }
futures-util = { version = "0.3" }
