[package]
name = "router-multicall"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
router-common = { path = "../router-common" }

[dev-dependencies]
soroban-sdk = { version = "21.7.6", default-features = false, features = ["testutils"] }
