[package]
name = "router-quote"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
router-common = { path = "../router-common" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
router-common = { path = "../router-common" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
